# advent-of-code

./: .envrc  .gitignore  CLAUDE.md  cabal.project  hie.yaml
.zed/: settings.json
2022/typescript/01/: main.test.ts  main.ts
2022/typescript/02/: main.test.ts  main.ts
2024/typescript/01/: 01.test.ts  01.ts  main.test.ts  main.ts
2024/typescript/02/: main.test.ts  main.ts
2024/typescript/03/: main.test.ts  main.ts
2024/typescript/04/: main.test.ts  main.ts
2024/typescript/05/: main.test.ts  main.ts
2024/typescript/06/: main.test.ts  main.ts
2024/typescript/07/: main.test.ts  main.ts
2025/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  fourmolu.yaml  x2025.cabal
2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
2025/test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Main.hs
